--- a/test/index.html
+++ b/test/index.html
@@ -33,8 +33,8 @@
 			function onclick(event) {
 				evt.unbind(target, 'click', onclick);
 
-				output.innerHTML += '`this` should be <em>button.target</em>: <strong>' + selhash(this) + '</strong><br>';
-				output.innerHTML += '`event.target` should be <em>button.target</em>: <strong>' + selhash(event.target) + '</strong><br>';
+				output.innerHTML += '`this` should be <em>button.target</em>: <strong>' + (selhash(this) === 'button.target') + '</strong><br>';
+				output.innerHTML += '`event.target` should be <em>button.target</em>: <strong>' + (selhash(event.target) === 'button.target') + '</strong><br>';
 
 				event.preventDefault();
 				event.stopPropagation();
@@ -42,7 +42,7 @@
 
 			evt.bind(target, 'click', onclick);
 			evt.bind(document, 'click', function (event) {
-				output.innerHTML += 'window click<br>';
+				output.innerHTML += 'document click<br>';
 				event.preventDefault();
 			});
 		</script>
